<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Uoft G.P.A</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="haha">Haha</string>
    <string name="reference_chart">Reference Chart</string>
    <string name="percentage">Percentage</string>
    <string name="value">Value</string>
    <string name="_85_100">85-100</string>
    <string name="_4_0">4.0</string>
    <string name="_80_84">80-84</string>

    <color name="orange1">#ff9800</color>

    <string name="_3_7">3.7</string>
    <string name="_77_79">77-79</string>
    <string name="_3_3">3.3</string>
    <string name="_73_76">73-76</string>
    <string name="textview">TextView</string>
    <string name="_67_69">67-69</string>
    <string name="_3_0">3.0</string>
    <string name="_63_66">63-66</string>
    <string name="_2_3">2.3</string>
    <string name="_60_62">60-62</string>
    <string name="_2_0">2.0</string>
    <string name="_1_7">1.7</string>

    <color name="lb">#b0bec5</color>

    <string name="_57_59">57-59</string>
    <string name="_1_3">1.3</string>
    <string name="_53_56">53-56</string>
    <string name="_1_0">1.0</string>
    <string name="_50_52">50-52</string>
    <string name="_0_7">0.7</string>
    <string name="_0_49">0-49</string>
    <string name="_0_0">0.0</string>

    <color name="dorange">#ff5722</color>
    <color name="wh">#e0e0e0</color>
    <color name="blue2">#607d8b</color>
    <color name="green1">#259b24</color>
    <color name="lg">#8bc34a</color>

    <string name="more_information">More Information</string>
    <string name="course_grade">Course Grade</string>
    <string name="_1_">(1)</string>
    <string name="_2_">(2)</string>
    <string name="_3_">(3)</string>
    <string name="_4_">(4)</string>
    <string name="_5_">(5)</string>
    <string name="go_">Go!</string>
    <string name="your_mark">Your Mark</string>
    <string name="clear_all">Clear All</string>
    <string name="like_the_app_">Like the App?</string>
    <string name="stay_connected_">Stay Connected!</string>
    <string name="download_this_fun_filled_game_it_apos_s_free_">Download this fun filled game! It&amp;apos;s free!&amp;apos;s free! "</string>
    <string name="download_this_fun_filled_game_its_free_">Download this fun filled game! Its free!</string>
    <string name="todo">TODO</string>
    <string name="whats_the_color_">"Whats the Color? "</string>
    <string name="for1">For</string>
    <string name="for_">For:</string>
    <string name="change_theme_to_red">Change Theme to Red</string>
    <string name="instructions">Instructions</string>
    <string name="enter_course_marks_in_percent_for_as_many_courses_as_you_like_">Enter course marks in percent for as many courses as you like.</string>
    <string name="hit_go_">Hit Go!</string>
    <string name="to_reset_">To reset:</string>
    <string name="hit_clear_all_">Hit clear all.</string>
    <string name="input_marks_in_for_any_amnt_of_courses">Input marks in % for any amnt of courses</string>
    <string name="switch_color_theme">Switch color theme</string>
    <string name="orange">Orange</string>
    <string name="black">Black</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="teal">Teal</string>
    <string name="blue">Blue</string>
    <string name="click_one_of_the_following_to_change_theme_">Click one of the following to change theme.</string>
    <string name="title_activity_cal">CalActivity</string>

</resources>
