<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
     >

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_below="@+id/button4"
        android:background="@android:color/transparent"
        android:gravity="left"
        android:text="@string/pink"
        android:textColor="@color/wh" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:background="@android:color/transparent"
        android:gravity="left"
        android:text="@string/orange"
        android:textColor="@color/wh" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:gravity="right"
        android:text="@string/black"
        android:textColor="@color/wh" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:background="@android:color/transparent"
        android:gravity="left"
        android:text="@string/green"
        android:textColor="@color/wh" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:gravity="right"
        android:text="@string/red"
        android:textColor="@color/wh" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button6"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:gravity="right"
        android:text="@string/blue"
        android:textColor="@color/wh" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/button5"
        android:layout_below="@+id/button5"
        android:background="@android:color/transparent"
        android:gravity="left"
        android:text="@string/purple"
        android:textColor="@color/wh" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignLeft="@+id/button8"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:gravity="right"
        android:text="@string/teal"
        android:textColor="@color/wh" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/click_one_of_the_following_to_change_theme_"
        android:textColor="@color/wh" />

</RelativeLayout>
